--- a/DapperDll/DapperDll/DapperDll.csproj
+++ b/DapperDll/DapperDll/DapperDll.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="Admin_Repository.cs" />
     <Compile Include="Chat_Repository.cs" />
+    <Compile Include="Member_Repository.cs" />
     <Compile Include="Moderator_Repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Query_Repository.cs" />
